--- a/FA.JustBlog/Views/Shared/_LoginPartial.cshtml
+++ b/FA.JustBlog/Views/Shared/_LoginPartial.cshtml
@@ -11,9 +11,7 @@
             <a id="manage" class="nav-link px-lg-3 py-3 py-lg-4" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
         </li>
         <li class="nav-item">
-            <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                <button id="logout" type="submit" class="nav-link btn btn-link text-dark border-0">Logout</button>
-            </form>
+            <a id="logout" type="submit" class="nav-link px-lg-3 py-3 py-lg-4 logout-button" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">Logout</a>
         </li>
     }
     else
