Modify interface for login, logout and register

--- a/FA.JustBlog/Areas/Identity/Pages/Account/Logout.cshtml
+++ b/FA.JustBlog/Areas/Identity/Pages/Account/Logout.cshtml
@@ -4,18 +4,46 @@
     ViewData["Title"] = "Log out";
 }
 
-<header>
-    <h1>@ViewData["Title"]</h1>
-    @{
-        if (User.Identity?.IsAuthenticated ?? false)
-        {
-            <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post">
-                <button type="submit" class="nav-link btn btn-link text-dark">Click here to Logout</button>
-            </form>
-        }
-        else
-        {
-            <p>You have successfully logged out of the application.</p>
-        }
-    }
-</header>
+<div class="container">
+
+    <!-- Outer Row -->
+    <div class="row justify-content-center">
+
+        <div class="col-xl-10 col-lg-12 col-md-9">
+
+            <div class="card o-hidden border-0 shadow-lg my-5">
+                <div class="card-body p-0">
+                    <!-- Nested Row within Card Body -->
+                    <div class="row">
+                        <div class="col-lg-6 d-none d-lg-block bg-logout-image"></div>
+                        <div class="col-lg-6">
+                            <div class="p-5">
+                                <div class="text-center">
+                                    <h1 class="h4 text-gray-900 mb-2">Log out</h1>
+                                    <p class="mb-4">
+                                        Are you sure?
+                                    </p>
+                                </div>
+                                @{
+                                    if (User.Identity?.IsAuthenticated ?? false)
+                                    {
+                                        <form class="user" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post">
+                                            <button type="submit" class="btn btn-primary btn-user btn-block">Click here to Logout</button>
+                                        </form>
+                                    }
+                                    else
+                                    {
+                                        <p>You have successfully logged out of the application.</p>
+                                    }
+                                }
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+
+</div>
