--- a/FA.JustBlog/Areas/Identity/Pages/Account/Register.cshtml
+++ b/FA.JustBlog/Areas/Identity/Pages/Account/Register.cshtml
@@ -17,6 +17,22 @@
                         </div>
                         <form class="user" id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
                             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
+                            <div class="form-group row">
+                                <div class="col-sm-6 mb-3 mb-sm-0">
+                                    <input type="text" asp-for="Input.FirstName"
+                                           class="form-control form-control-user"
+                                           autocomplete="given-name" aria-required="true"
+                                           placeholder="First Name" />
+                                    <span asp-validation-for="Input.FirstName" class="text-danger"></span>
+                                </div>
+                                <div class="col-sm-6">
+                                    <input type="text" asp-for="Input.LastName"
+                                           class="form-control form-control-user"
+                                           autocomplete="family-name" aria-required="true"
+                                           placeholder="Last Name" />
+                                    <span asp-validation-for="Input.LastName" class="text-danger"></span>
+                                </div>
+                            </div>
                             <div class="form-group">
                                 <input type="email" asp-for="Input.Email"
                                        class="form-control form-control-user"
