Add a feature that users cannot edit their logged-in accounts.

--- a/FA.JustBlog/Areas/Admin/Views/User/Edit.cshtml
+++ b/FA.JustBlog/Areas/Admin/Views/User/Edit.cshtml
@@ -24,9 +24,17 @@
                     </div>
                     <div class="form-group">
                         <label asp-for="UserName" class="control-label"></label>
-                        <input asp-for="UserName" class="form-control" />
+                        @if (ViewBag.CurrentUserName == Model.UserName)
+                        {
+                            <input asp-for="UserName" class="form-control" disabled />
+                        }
+                        else
+                        {
+                            <input asp-for="UserName" class="form-control" />
+                        }
                         <span asp-validation-for="UserName" class="text-danger"></span>
                     </div>
+
                     <div class="form-group">
                         <label asp-for="Email" class="control-label"></label>
                         <input asp-for="Email" class="form-control" />
