Fix some layout and create profile page

--- a/FA.JustBlog/Areas/Admin/Pages/AccessDenied.cshtml
+++ b/FA.JustBlog/Areas/Admin/Pages/AccessDenied.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model FA.JustBlog.Areas.Admin.Pages.AccessDeniedModel
+@model AccessDeniedModel
 @{
     ViewData["Title"] = "Access denied";
 }
