--- a/FA.JustBlog/Views/Shared/_LoginPartial.cshtml
+++ b/FA.JustBlog/Views/Shared/_LoginPartial.cshtml
@@ -7,11 +7,12 @@
 <ul class="navbar-nav">
     @if (SignInManager.IsSignedIn(User))
     {
+        var user = await UserManager.GetUserAsync(User);
         <li class="nav-item">
-            <a id="manage" class="nav-link px-lg-3 py-3 py-lg-4" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
+            <a id="manage" class="nav-link px-lg-3 py-3 py-lg-4" asp-area="Admin" asp-page="/Profile">Hello @user.FirstName @user.LastName!</a>
         </li>
         <li class="nav-item">
-            <a id="logout" type="submit" class="nav-link px-lg-3 py-3 py-lg-4 logout-button" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">Logout</a>
+            <a id="logout" type="submit" class="nav-link px-lg-3 py-3 py-lg-4 logout-button" asp-area="Identity" asp-page="/Account/Logout">Logout</a>
         </li>
     }
     else
