--- a/FA.JustBlog/Areas/Admin/Pages/AccessDenied.cshtml
+++ b/FA.JustBlog/Areas/Admin/Pages/AccessDenied.cshtml
@@ -11,8 +11,8 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-6">
                         <div class="text-center mt-4">
-                            <h1 class="display-1 text-danger">401</h1>
-                            <p class="lead text-danger">Unauthorized</p>
+                            <h1 class="display-1 text-danger">403</h1>
+                            <p class="lead text-danger">Forbidden</p>
                             <p class="text-danger">Access to this resource is denied.</p>
                             <a href="/Admin/Home">
                                 <i class="fas fa-arrow-left me-1"></i>
